metadata/sf-prod/force-app/main/default/objects/Account/fields/Account_Platinum_Services_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Account_Platinum_Services_Delivered__c</fullName>
    <description># of Platinum Service Delivered for an Account</description>
    <inlineHelpText># of Platinum Service Delivered for an Account</inlineHelpText>
    <label>Account - Platinum Services Delivered</label>
    <summarizedField>Opportunity.Platinum_Service_Delivered_N__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Platinum_Service_Delivered_N__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Platinum_Service_Delivered_N__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>