metadata/sf-prod/force-app/main/default/objects/Account/fields/Account_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Detail__c</fullName>
    <label>Account Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Detail</valueSetName>
    </valueSet>
</CustomField>