metadata/sf-prod/force-app/main/default/objects/Account/fields/Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunities__c</fullName>
    <label>Active Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>