metadata/sf-prod/force-app/main/default/objects/Account/fields/Ambition_Tier__c.field-meta.xml
<CustomField>
    <fullName>Ambition_Tier__c</fullName>
    <description>Customer Tier. Field copied from Aurea SFDC.</description>
    <inlineHelpText>Customer Tier</inlineHelpText>
    <label>Ambition Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>