metadata/sf-prod/force-app/main/default/objects/Account/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Is the sum of ARR of all opportunities where the Renewal / Start Date is before TODAY and the Renewal Date / Start Date + Term is after TODAY.</description>
    <inlineHelpText>Reflects the ARR of our total relationship with the customer. It is the sum of ARR of all active contracts as of TODAY.</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>