metadata/sf-prod/force-app/main/default/objects/Account/fields/ARR_Currency__c.field-meta.xml
<CustomField>
    <fullName>ARR_Currency__c</fullName>
    <label>ARR_Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>