metadata/sf-prod/force-app/main/default/objects/Account/fields/AWS_Marketplace_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_ID__c</fullName>
    <description>Marketplace ID for Private Offer creation and searching</description>
    <label>AWS Marketplace ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>