metadata/sf-prod/force-app/main/default/objects/Account/fields/AWS_Spend__c.field-meta.xml
<CustomField>
    <fullName>AWS_Spend__c</fullName>
    <description>Core information to assess product fit</description>
    <inlineHelpText>Core information to assess product fit</inlineHelpText>
    <label>AWS Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>