metadata/sf-prod/force-app/main/default/objects/Account/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Billing Account Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>