metadata/sf-prod/force-app/main/default/objects/Account/fields/Central_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Central_Account_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Central SF ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>