metadata/sf-prod/force-app/main/default/objects/Account/fields/Central_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Central_Parent_ID__c</fullName>
    <label>Central Parent ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>