metadata/sf-prod/force-app/main/default/objects/Account/fields/Central_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Central_Vertical__c</fullName>
    <label>Central Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accuris</fullName>
            </value>
            <value>
                <fullName>Acorn</fullName>
            </value>
            <value>
                <fullName>Agemni</fullName>
            </value>
            <value>
                <fullName>Agentek</fullName>
            </value>
            <value>
                <fullName>Alterpoint</fullName>
            </value>
            <value>
                <fullName>Artemis Finland</fullName>
            </value>
            <value>
                <fullName>Auto-Trol</fullName>
            </value>
            <value>
                <fullName>Beckon</fullName>
            </value>
            <value>
                <fullName>Bespeak</fullName>
            </value>
            <value>
                <fullName>BiznessApps</fullName>
            </value>
            <value>
                <fullName>Bonzai</fullName>
            </value>
            <value>
                <fullName>BryterCX</fullName>
            </value>
            <value>
                <fullName>Chute</fullName>
            </value>
            <value>
                <fullName>Clear Technology Inc</fullName>
            </value>
            <value>
                <fullName>Computron</fullName>
            </value>
            <value>
                <fullName>CoreTrac</fullName>
            </value>
            <value>
                <fullName>Corizon</fullName>
            </value>
            <value>
                <fullName>DNN</fullName>
            </value>
            <value>
                <fullName>Ecora</fullName>
            </value>
            <value>
                <fullName>EPM Live</fullName>
            </value>
            <value>
                <fullName>ETI</fullName>
            </value>
            <value>
                <fullName>Everest</fullName>
            </value>
            <value>
                <fullName>Firm58</fullName>
            </value>
            <value>
                <fullName>FirstRain</fullName>
            </value>
            <value>
                <fullName>FogBugz</fullName>
            </value>
            <value>
                <fullName>Gensym</fullName>
            </value>
            <value>
                <fullName>gomembers</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Ignite Technologies</fullName>
            </value>
            <value>
                <fullName>IMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>