metadata/sf-prod/force-app/main/default/objects/Account/fields/DO_NOT_CALL__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_CALL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field migrated from Ignite SFDC.</description>
    <label>DO NOT CALL</label>
    <type>Checkbox</type>
</CustomField>