metadata/sf-prod/force-app/main/default/objects/Account/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description>Field migrated from Ignite SFDC</description>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>RES (Black)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>