metadata/sf-prod/force-app/main/default/objects/Account/fields/Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>Health_Reason__c</fullName>
    <description>Field migrated from Ignite SFDC</description>
    <label>Health Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not launched &gt; 90 days</fullName>
            </value>
            <value>
                <fullName>Client Execution (lacking effort from the POC)</fullName>
            </value>
            <value>
                <fullName>Unresponsive POC</fullName>
            </value>
            <value>
                <fullName>Billing Issue / Delinquent</fullName>
            </value>
            <value>
                <fullName>Custom Engineering Project Off Track</fullName>
            </value>
            <value>
                <fullName>High Defect Volume</fullName>
            </value>
            <value>
                <fullName>Critical Technical Issue</fullName>
            </value>
            <value>
                <fullName>POC Turnover/ Lost POC</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Risk of loss- Competitor/Budget</fullName>
            </value>
            <value>
                <fullName>Lack of Engagement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>