metadata/sf-prod/force-app/main/default/objects/Account/fields/Health_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Health_Reason_Explanation__c</fullName>
    <description>Field migrated from Ignite SFDC</description>
    <label>Health Reason Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>