metadata/sf-prod/force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No related CSM Opportunities: 0%
Otherwise: AVG([Related CSM Opportunities].Health Score)</description>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>