metadata/sf-prod/force-app/main/default/objects/Account/fields/Home_Product_Renewal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Home_Product_Renewal_Contact__c</fullName>
    <description>LAMBDA-63247 : This will store the primary contact from the recent renewal opportunity</description>
    <label>Home Product Renewal Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>