metadata/sf-prod/force-app/main/default/objects/Account/fields/Influitive_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Influitive_SF_ID__c</fullName>
    <description>ID of this account in Influitive SFDC. Used for migration. Will be deleted later.</description>
    <externalId>true</externalId>
    <label>Influitive SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>