metadata/sf-prod/force-app/main/default/objects/Account/fields/isChildAccountActive__c.field-meta.xml
<CustomField>
    <fullName>isChildAccountActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if any child account is active. Field migrated from Ignite SFDC.</description>
    <inlineHelpText>True if any child account is active.</inlineHelpText>
    <label>isChildAccountActive</label>
    <type>Checkbox</type>
</CustomField>