metadata/sf-prod/force-app/main/default/objects/Account/fields/Job_Openings__c.field-meta.xml
<CustomField>
    <fullName>Job_Openings__c</fullName>
    <description>Used for XO Hire Prime account qualification. Defines what positions this entity is recruiting for.</description>
    <inlineHelpText>Used for XO Hire Prime account qualification. Defines what positions this entity is recruiting for.</inlineHelpText>
    <label>Job Openings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Ops</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>