metadata/sf-prod/force-app/main/default/objects/Account/fields/Kayako_AI_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Kayako_AI_Campaign__c</fullName>
    <inlineHelpText>Temporary field used to track Kayako Co-pilot campaign.</inlineHelpText>
    <label>Kayako AI Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>