metadata/sf-prod/force-app/main/default/objects/Account/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <inlineHelpText>URL of the LinkedIn profile for this entity / company</inlineHelpText>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>