metadata/sf-prod/force-app/main/default/objects/Account/fields/Migrated_Aurea_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Aurea_SF_ID__c</fullName>
    <description>ID of the account in Aurea SFDC</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the account in Aurea SFDC</inlineHelpText>
    <label>Migrated Aurea SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>