metadata/sf-prod/force-app/main/default/objects/Account/fields/Migrated_IgniteTech_SF_IDD__c.field-meta.xml
<CustomField>
    <fullName>Migrated_IgniteTech_SF_IDD__c</fullName>
    <description>Account ID in IgniteTech SFDC.</description>
    <externalId>true</externalId>
    <inlineHelpText>Account ID in IgniteTech SFDC.</inlineHelpText>
    <label>Migrated IgniteTech SF IDD</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>