metadata/sf-prod/force-app/main/default/objects/Account/fields/Natural_Name__c.field-meta.xml
<CustomField>
    <fullName>Natural_Name__c</fullName>
    <description>LAMBDA-63247 : This field is used for XO Hire work and is synced from Salesforce to Outreach</description>
    <label>Natural Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>