metadata/sf-prod/force-app/main/default/objects/Account/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>ID which is taken from the URL of the customer profile page in the NetSuite</description>
    <externalId>true</externalId>
    <inlineHelpText>Customer profile page is available at https://4914352.app.netsuite.com/app/common/entity/custjob.nl?id=&lt;ID&gt; (replace &lt;ID&gt; with this field value)</inlineHelpText>
    <label>NetSuite ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>