metadata/sf-prod/force-app/main/default/objects/Account/fields/New_Ignite_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Ignite_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to indicate this account is newly created during IgniteTech migration. Admin reference only and will be removed after migration.</description>
    <label>New Ignite Account?</label>
    <type>Checkbox</type>
</CustomField>