metadata/sf-prod/force-app/main/default/objects/Account/fields/Next_xBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_xBR_Date__c</fullName>
    <description>Field migrated from Ignite SFDC.</description>
    <label>Next xBR Date</label>
    <type>Date</type>
</CustomField>