metadata/sf-prod/force-app/main/default/objects/Account/fields/Prime_ARR_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Prime_ARR_Utilized__c</fullName>
    <label>Prime ARR Utilized</label>
    <summarizedField>Opportunity.ARR__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>