metadata/sf-prod/force-app/main/default/objects/Account/fields/Product_Billing_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Billing_System_ID__c</fullName>
    <description>AccountId for the external billing system. (Zuora for Kayako, Chargebee for Sococo). This allows mapping of Salesforce accounts with external billing systems.</description>
    <externalId>true</externalId>
    <inlineHelpText>AccountId for the external billing system. (Zuora for Kayako, Chargebee for Sococo).</inlineHelpText>
    <label>Product Billing System ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>