metadata/sf-prod/force-app/main/default/objects/Account/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <description>All product families for which this account holds subscriptions.</description>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>