metadata/sf-prod/force-app/main/default/objects/Account/fields/Revenue_Range_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range_in_USD__c</fullName>
    <label>Revenue Range (in USD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Revenue_Range_in_USD</valueSetName>
    </valueSet>
</CustomField>