metadata/sf-prod/force-app/main/default/objects/Account/fields/StreetSmart_CompanyID__c.field-meta.xml
<CustomField>
    <fullName>StreetSmart_CompanyID__c</fullName>
    <description>StreetSmart CompanyID</description>
    <externalId>true</externalId>
    <inlineHelpText>StreetSmart CompanyID</inlineHelpText>
    <label>StreetSmart CompanyID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>