metadata/sf-prod/force-app/main/default/objects/Account/fields/StreetSmart_License_Count__c.field-meta.xml
<CustomField>
    <fullName>StreetSmart_License_Count__c</fullName>
    <description>StreetSmart License Count</description>
    <inlineHelpText>StreetSmart License Count</inlineHelpText>
    <label>StreetSmart License Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>