metadata/sf-prod/force-app/main/default/objects/Account/fields/Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Success_Level__c</fullName>
    <label>Success Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Success_Levels</valueSetName>
    </valueSet>
</CustomField>