metadata/sf-prod/force-app/main/default/objects/Account/fields/Support_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Expiration_Date__c</fullName>
    <label>Support Expiration Date</label>
    <type>Date</type>
</CustomField>