metadata/sf-prod/force-app/main/default/objects/Account/fields/Sync_To_IgniteTech_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_IgniteTech_HubSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to decide if the Account Product Families values contain IgniteTech BU products. This field will be used in an Account sharing rule to share all the account with this filed = true to the IgniteTech HubSpot Integration User. Created a checked instead of a formula due to a limitation in Salesforce sharing rule. Hide from page layout.</description>
    <label>Sync To IgniteTech HubSpot?</label>
    <type>Checkbox</type>
</CustomField>