metadata/sf-prod/force-app/main/default/objects/Account/fields/Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>Termination_Rights__c</fullName>
    <description>If Contract Format &apos;Pre-Aurea MSA&apos; or &apos;Customer MSA&apos; is selected Termination Rights must be populated. Field copied from Aurea SFDC.</description>
    <inlineHelpText>If Contract Format &apos;Pre-Aurea MSA&apos; or &apos;Customer MSA&apos; is selected Termination Rights must be populated</inlineHelpText>
    <label>Termination Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Bi-lateral</fullName>
            </value>
            <value>
                <fullName>Termed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>