metadata/sf-prod/force-app/main/default/objects/Account/fields/Turn_Off_Late_Renewals_Emails__c.field-meta.xml
<CustomField>
    <fullName>Turn_Off_Late_Renewals_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked Late Renewals emails will not be send for Opportunities related to this Account.

Adding LAMBDA-64869 for Reference</description>
    <inlineHelpText>If checked Late Renewals emails will not be send for Opportunities related to this Account.</inlineHelpText>
    <label>Turn Off Late Renewals Emails</label>
    <type>Checkbox</type>
</CustomField>