metadata/sf-prod/force-app/main/default/objects/Account/fields/Vision_3_year__c.field-meta.xml
<CustomField>
    <fullName>Vision_3_year__c</fullName>
    <description>What is our broad long terms plan for the customer. Focus on what the customer cares about). 3 to 4 sentences max. Field copied from Aurea SFDC.</description>
    <inlineHelpText>What is our broad long terms plan for the customer. Focus on what the customer cares about). 3 to 4 sentences max.</inlineHelpText>
    <label>Vision (3-year)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>