metadata/sf-prod/force-app/main/default/objects/Account/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <description>Top 3 plays for the next year based on the customer category i.e; get them on a path to ascend. This should tie into a strategic customer objective. Field copied from Aurea SFDC.</description>
    <inlineHelpText>Top 3 plays for the next year based on the customer category i.e; get them on a path to ascend. This should tie into a strategic customer objective.</inlineHelpText>
    <label>Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>