metadata/sf-prod/force-app/main/default/objects/Account/fields/XO_Hire_Score__c.field-meta.xml
<CustomField>
    <fullName>XO_Hire_Score__c</fullName>
    <description>How should we prioritize this account for XO Hire Prime outreach. We should prioritize accounts with higher score.</description>
    <formula>CASE(Rating,
&quot;Hot&quot;, 2,
&quot;Warm&quot;, 1,
&quot;Cold&quot;, 0,
0) * 1000000

+

MIN(FLOOR(ARR__c / 1000), 9999) * 10

+

+

IF(
INCLUDES(Job_Openings__c, &quot;Support&quot;) || INCLUDES(Job_Openings__c, &quot;Finance&quot;) || INCLUDES(Job_Openings__c, &quot;Engineering&quot;) || INCLUDES(Job_Openings__c, &quot;Sales&quot;),
2, 
IF(ISBLANK(Job_Openings__c), 0, 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How should we prioritize this account for XO Hire Prime outreach. We should prioritize accounts with higher score.</inlineHelpText>
    <label>XO Hire Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>