metadata/sf-prod/force-app/main/default/objects/Account/fields/Zendesk_Id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Id__c</fullName>
    <externalId>true</externalId>
    <label>Zendesk Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>