metadata/sf-prod/force-app/main/default/objects/Account/listViews/ACRM_Accounts.listView-meta.xml
<ListView>
    <fullName>ACRM_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Families__c</field>
        <operation>includes</operation>
        <value>ACRM</value>
    </filters>
    <label>ACRM Accounts</label>
</ListView>